--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "owen-it/laravel-auditing": "^9.2",
         "rap2hpoutre/laravel-log-viewer": "^1.2",
         "santigarcor/laratrust": "5.2.*",
+        "sarfraznawaz2005/visitlog": "^1.2",
         "yajra/laravel-datatables-oracle": "^9.3"
     },
     "require-dev": {
