--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,14 @@ DB_DATABASE_SECOND=database2
 DB_USERNAME_SECOND=root
 DB_PASSWORD_SECOND=secret
 
+# WEB DB
+DB_CONNECTION_THIRD=mysql
+DB_HOST_THIRD=127.0.0.1
+DB_PORT_THIRD=3306
+DB_DATABASE_THIRD=database3
+DB_USERNAME_THIRD=root
+DB_PASSWORD_THIRD=secret
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
